updated package-json name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "motionmart framer-motion2",
+  "name": "scroll-story-case-study framer-motion2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
